[gd_scene load_steps=21 format=3 uid="uid://tr5n77jxj4bk"]

[ext_resource type="Texture2D" uid="uid://bdvave8tqdpma" path="res://assets/images/bg.png" id="1_fsi5r"]
[ext_resource type="Script" uid="uid://ek76issrvc7u" path="res://scene/campo/campo.gd" id="1_ho6bb"]
[ext_resource type="Texture2D" uid="uid://bs7ghicekq2nd" path="res://assets/images/cell-inventory.png" id="3_683ob"]
[ext_resource type="Texture2D" uid="uid://t5l515vog1t5" path="res://assets/images/bgb_pb.png" id="4_i4wt1"]
[ext_resource type="Texture2D" uid="uid://og8ixl5m57ys" path="res://assets/images/bar.png" id="5_jut0g"]
[ext_resource type="Texture2D" uid="uid://d102yj3w2u7lh" path="res://assets/images/barra_progresso.png" id="6_68dis"]
[ext_resource type="Texture2D" uid="uid://n76nb3fok0k5" path="res://assets/images/portal.png" id="7_jut0g"]
[ext_resource type="Texture2D" uid="uid://buvmp0ekj6fw6" path="res://assets/images/portal_off.png" id="8_68dis"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3ewbo"]
albedo_texture = ExtResource("1_fsi5r")
uv1_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_ho6bb"]
material = SubResource("StandardMaterial3D_3ewbo")
size = Vector2(200, 200)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_0tx2t"]
data = PackedVector3Array(100, 0, 100, -100, 0, 100, 100, 0, -100, -100, 0, 100, -100, 0, -100, 100, 0, -100)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_i4wt1"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="FontFile" id="FontFile_jut0g"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_68dis"]
font = SubResource("FontFile_jut0g")
outline_size = 3
outline_color = Color(0.115371, 0.115562, 0.4301, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="FontFile" id="FontFile_44f8o"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/12/0/ascent = 0.0
cache/0/12/0/descent = 0.0
cache/0/12/0/underline_position = 0.0
cache/0/12/0/underline_thickness = 0.0
cache/0/12/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_xje0e"]
font = SubResource("FontFile_44f8o")
font_size = 12
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0.662745, 0.831373)

[sub_resource type="FontFile" id="FontFile_eh8wc"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_xlywj"]
font = SubResource("FontFile_eh8wc")
font_size = 10
font_color = Color(0.639216, 0.0392157, 0.0313726, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0.662745, 0.792157)

[sub_resource type="FontFile" id="FontFile_kyrxf"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_qtqy0"]
font = SubResource("FontFile_kyrxf")
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0.115371, 0.115562, 0.4301, 1)

[node name="campo" type="Node3D"]
script = ExtResource("1_ho6bb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0)
mesh = SubResource("PlaneMesh_ho6bb")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_0tx2t")

[node name="bloqueios" type="Node3D" parent="."]

[node name="N" type="StaticBody3D" parent="bloqueios"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="bloqueios/N"]
shape = SubResource("ConcavePolygonShape3D_i4wt1")

[node name="S" type="StaticBody3D" parent="bloqueios"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="bloqueios/S"]
shape = SubResource("ConcavePolygonShape3D_i4wt1")

[node name="L" type="StaticBody3D" parent="bloqueios"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="bloqueios/L"]
shape = SubResource("ConcavePolygonShape3D_i4wt1")

[node name="O" type="StaticBody3D" parent="bloqueios"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="bloqueios/O"]
shape = SubResource("ConcavePolygonShape3D_i4wt1")

[node name="mobs" type="Node" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="telas" type="Node" parent="."]

[node name="ui" type="CanvasLayer" parent="."]

[node name="TextureProgressBar" type="TextureProgressBar" parent="ui"]
custom_minimum_size = Vector2(0, 5)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 10.0
grow_horizontal = 2
value = 20.0
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 5
stretch_margin_right = 10
stretch_margin_bottom = 5
texture_under = ExtResource("3_683ob")
texture_over = ExtResource("4_i4wt1")
texture_progress = ExtResource("5_jut0g")
tint_progress = Color(0.921569, 0, 0, 1)

[node name="Label" type="Label" parent="ui/TextureProgressBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -105.0
offset_top = 7.0
offset_right = -40.0
offset_bottom = 30.0
grow_horizontal = 0
text = "00/00"
label_settings = SubResource("LabelSettings_68dis")
horizontal_alignment = 1

[node name="Control" type="Control" parent="ui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="bg" type="TextureRect" parent="ui/Control"]
layout_mode = 0
offset_left = 5.0
offset_top = 18.0
offset_right = 45.0
offset_bottom = 58.0
texture = ExtResource("3_683ob")
expand_mode = 1

[node name="foto" type="TextureRect" parent="ui/Control/bg"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 36.0
offset_bottom = 37.0
expand_mode = 1

[node name="level" type="Label" parent="ui/Control/bg"]
layout_mode = 0
offset_left = 2.0
offset_right = 16.0
offset_bottom = 17.0
text = "22"
label_settings = SubResource("LabelSettings_xje0e")

[node name="vidas" type="Label" parent="ui/Control/bg"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -17.0
offset_top = -18.0
offset_right = -4.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 0
text = "00
"
label_settings = SubResource("LabelSettings_xlywj")
horizontal_alignment = 2
vertical_alignment = 2

[node name="hp" type="TextureProgressBar" parent="ui/Control"]
layout_mode = 0
offset_left = 47.0
offset_top = 25.0
offset_right = 179.0
offset_bottom = 31.0
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 10
texture_under = ExtResource("5_jut0g")
texture_over = ExtResource("6_68dis")
texture_progress = ExtResource("5_jut0g")
tint_under = Color(0.498039, 0.498039, 0.498039, 0.831373)
tint_progress = Color(0.639216, 0.0392157, 0.0313726, 1)

[node name="mp" type="TextureProgressBar" parent="ui/Control"]
layout_mode = 0
offset_left = 46.0
offset_top = 34.0
offset_right = 178.0
offset_bottom = 40.0
value = 50.0
nine_patch_stretch = true
stretch_margin_left = 10
texture_under = ExtResource("5_jut0g")
texture_over = ExtResource("6_68dis")
texture_progress = ExtResource("5_jut0g")
tint_under = Color(0.498039, 0.498039, 0.498039, 0.831373)
tint_progress = Color(0.115371, 0.115562, 0.4301, 1)

[node name="TextureButton" type="TextureButton" parent="ui/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -43.0
offset_top = 13.0
offset_right = -3.0
offset_bottom = 53.0
grow_horizontal = 0
texture_normal = ExtResource("7_jut0g")
texture_disabled = ExtResource("8_68dis")
ignore_texture_size = true
stretch_mode = 0

[node name="next_wave" type="Label" parent="ui"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.0
offset_top = 23.0
offset_right = 60.0
offset_bottom = 46.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_qtqy0")
horizontal_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="ui/Control/TextureButton" to="." method="_on_texture_button_pressed"]
